--- a/bio.html
+++ b/bio.html
@@ -5,16 +5,37 @@
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
 </head>
 <body>
+
+	<nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
+			<div class="container">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+					</div>
+					<div class="collapse navbar-collapse" id="nav">
+							<ul class="nav navbar-nav">
+									<li><a href="http://tafarid.github.io/">Welcome Page</a></li>
+									<li class="active"><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
+									<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
+							</ul>
+					</div>
+			</div>
+	</nav>
+
 	<h1>Southern New England, Born & Raised</h1>
 
 	<img src="My_Photo.jpg" alt = "Physics Lab!" height = "40%">
 
 	<div id= "Bio">
-		<p>Hello! My name is Tafari Ellis Duncan. I'm a proud son of Jamaican and African-American ancestry who was <br>born in Hartford, Connecticut. I'm currently studing Engineering at Tufts University (Computer Science Major)<br>and searching for the world's best hamburger. For more info, see my <a href ="https://www.linkedin.com/in/tafariduncan">LinkedIn</a></a> page.</p>
-    </div>
-
-    <div id = "end">
-    	<a href="http://tafarid.github.io">Back to Home Page</a>
-    </div>
+		<p>Hello! My name is Tafari Ellis Duncan. I'm a proud son of Jamaican and African-American ancestry who was
+		<br>born in Hartford, Connecticut. I'm currently studing Engineering at Tufts University (Computer Science Major)
+		<br>and searching for the world's best hamburger.
+		For more info, see my <a href ="https://www.linkedin.com/in/tafariduncan">LinkedIn</a></a> page.</p>
+  </div>
 </body>
 </html>
