--- a/bio.html
+++ b/bio.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+	<script src="//code.jquery.com/jquery.min.js"></script>
+	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	<title>The Bio of Tafari Duncan</title>
-	<link rel="stylesheet" type="text/css" href="bio-style.css">
 </head>
 <body>
 
@@ -29,7 +34,7 @@
 
 	<h1>Southern New England, Born & Raised</h1>
 
-	<img src="My_Photo.jpg" alt = "Physics Lab!" height = "40%">
+	<img src="images/myself/My_Photo.jpg" alt = "Physics Lab!" height = "40%">
 
 	<div id= "Bio">
 		<p>Hello! My name is Tafari Ellis Duncan. I'm a proud son of Jamaican and African-American ancestry who was
