--- a/bio.html
+++ b/bio.html
@@ -34,7 +34,7 @@
 
 	<h1>Southern New England, Born & Raised</h1>
 
-	<img src="images/myself/My_Photo.jpg" alt = "Physics Lab!" height = "40%">
+	<div><img src="images/myself/My_Photo.jpg" alt = "Physics Lab!" height = "40%"></div>
 
 	<div id= "Bio">
 		<p>Hello! My name is Tafari Ellis Duncan. I'm a proud son of Jamaican and African-American ancestry who was
