--- a/bio.html
+++ b/bio.html
@@ -44,5 +44,9 @@
 		<br>and searching for the world's best hamburger.
 		For more info, see my <a href ="https://www.linkedin.com/in/tafariduncan">LinkedIn</a></a> page.</p>
   </div>
+
+	<div class="footer">
+		<p>  Built by Tafari Duncan, powered by Bootstrap</p>
+	</div>
 </body>
 </html>
