--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@
 							<ul class="nav navbar-nav">
 									<li><a href="http://tafarid.github.io/">Welcome Page</a></li>
 									<li class="active"><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
-									<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
+									<li><a href="http://tafarid.github.io/resume.html">Thinking about hiring Tafari?</a></li>
 							</ul>
 					</div>
 			</div>
@@ -41,8 +41,9 @@
 		<br>
 		<p>Hello! My name is Tafari Ellis Duncan. I'm a proud son of Jamaican and African-American ancestry who was
 		<br>born in Hartford, Connecticut. I'm currently studing Engineering at Tufts University (Computer Science Major)
-		<br>and searching for the world's best hamburger.
-		For more info, see my <a href ="https://www.linkedin.com/in/tafariduncan">LinkedIn</a></a> page.</p>
+		<br>and searching for an internship in Computer Software. I designed this webpage as a sample of my work, I hope
+		<br>you enjoy it!
+		For more info, also see my <a href ="https://www.linkedin.com/in/tafariduncan">LinkedIn</a></a> page.</p>
   </div>
 
 	<div class="footer">
