--- a/bio.html
+++ b/bio.html
@@ -46,7 +46,7 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="http://placehold.it/1200x315" alt="...">
+					<img src="My_Photo.jpg" alt="Me">
 					<div class="carousel-caption">
 							<h3>Caption Text</h3>
 					</div>
