--- a/bio.html
+++ b/bio.html
@@ -92,3 +92,9 @@
 	</div>
 </body>
 </html>
+<script>
+    $('.carousel').carousel({
+        interval: 10000
+				pause: "hover"
+    })
+</script>
