--- a/bio.html
+++ b/bio.html
@@ -91,6 +91,9 @@
 		<p>  Built by Tafari Duncan, powered by Bootstrap</p>
 	</div>
 
+
+	<script src="//code.jquery.com/jquery.min.js"></script>
+	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	<script>
 	    $('.carousel').carousel({
 	        interval: 10000
