--- a/bio.html
+++ b/bio.html
@@ -35,7 +35,7 @@
 	<h1>Southern New England, Born & Raised</h1>
 
 	<div>
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="10000" data-pause="hover">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
 				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -46,22 +46,16 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="images/myself/My_Photo.jpg" alt="Me">
-					<div class="carousel-caption">
-							<h3>Caption Text</h3>
-					</div>
+					<img class="img-responsive center-block" src="images/myself/My_Photo.jpg" alt = "Physics Lab!" height = "40%">
+					<!-- <div class="carousel-caption">
+							<h3>Caption Text</h3> //NOT IN USE
+					</div> -->
 				</div>
 				<div class="item">
 					<img src="http://placehold.it/1200x315" alt="...">
-					<div class="carousel-caption">
-							<h3>Caption Text</h3>
-					</div>
 				</div>
 				<div class="item">
 					<img src="http://placehold.it/1200x315" alt="...">
-					<div class="carousel-caption">
-							<h3>Caption Text</h3>
-					</div>
 				</div>
 			</div>
 
@@ -74,8 +68,6 @@
 			</a>
 			</div> <!-- Carousel -->
 </div>
-
-	<div><img src="images/myself/My_Photo.jpg" alt = "Physics Lab!" height = "40%"></div>
 
 	<div id= "Bio">
 		<br>
@@ -91,14 +83,5 @@
 		<p>  Built by Tafari Duncan, powered by Bootstrap</p>
 	</div>
 
-
-	<script src="//code.jquery.com/jquery.min.js"></script>
-	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-	<script>
-	    $('.carousel').carousel({
-	        interval: 10000
-					pause: "hover"
-	    })
-	</script>
 </body>
 </html>
