--- a/bio.html
+++ b/bio.html
@@ -46,16 +46,22 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img class="img-responsive center-block" src="images/myself/My_Photo.jpg" alt = "Physics Lab!" height = "40%">
+					<img class="img-responsive center-block" src="images/myself/My_Photo.jpg" alt = "At a Physics Lab">
 					<!-- <div class="carousel-caption">
 							<h3>Caption Text</h3> //NOT IN USE
 					</div> -->
 				</div>
 				<div class="item">
-					<img src="http://placehold.it/1200x315" alt="...">
+					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts">
 				</div>
 				<div class="item">
-					<img src="http://placehold.it/1200x315" alt="...">
+					<img class="img-responsive center-block" src="images/myself/2015.jpg" alt="In Hong Kong">
+				</div>
+				<div class="item">
+					<img class="img-responsive center-block" src="images/myself/1185.jpg" alt="In Hong Kong Dragonboating">
+				</div>
+				<div class="item">
+					<img class="img-responsive center-block" src="Crew.jpg" alt="Rowing Crew">
 				</div>
 			</div>
 
