--- a/bio.html
+++ b/bio.html
@@ -55,13 +55,13 @@
 					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/2015.jpg" alt="In Hong Kong">
+					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" max-width=50%>
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/1185.jpg" alt="In Hong Kong Dragonboating">
+					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="Crew.jpg" alt="Rowing Crew">
+					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew">
 				</div>
 			</div>
 
