--- a/bio.html
+++ b/bio.html
@@ -55,7 +55,7 @@
 					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" max-width=50%>
+					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" max-width="315px">
 				</div>
 				<div class="item">
 					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating">
