--- a/bio.html
+++ b/bio.html
@@ -58,7 +58,7 @@
 					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" max-width="315px">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating">
+					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" max-width="315">
 				</div>
 				<div class="item">
 					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew">
