--- a/bio.html
+++ b/bio.html
@@ -55,10 +55,10 @@
 					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" max-width="315px">
+					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" width="315px">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" max-width="315">
+					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" width="315">
 				</div>
 				<div class="item">
 					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew">
