--- a/bio.html
+++ b/bio.html
@@ -52,16 +52,16 @@
 					</div> -->
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts">
+					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts" height="400">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" width="315px">
+					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" height="400">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" width="315">
+					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" height="400">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew">
+					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew" height="400">
 				</div>
 			</div>
 
