--- a/bio.html
+++ b/bio.html
@@ -41,6 +41,7 @@
 				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="3"></li>
 			</ol>
 
 			<!-- Wrapper for slides -->
@@ -52,16 +53,16 @@
 					</div> -->
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts" height="400">
+					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts" width="400">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" height="400">
+					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" width="400">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" height="400">
+					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" width="400">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew" height="400">
+					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew" width="400">
 				</div>
 			</div>
 
