--- a/bio.html
+++ b/bio.html
@@ -53,16 +53,16 @@
 					</div> -->
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts" width="400">
+					<img class="img-responsive center-block" src="images/myself/Tufts.jpg" alt="At Tufts" style="width: 100%;">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong" width="500">
+					<img class="img-responsive center-block" src="images/myself/IMG_2015.jpg" alt="In Hong Kong"style="height: 100%;">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" width="500">
+					<img class="img-responsive center-block" src="images/myself/IMG_1185.jpg" alt="In Hong Kong Dragonboating" style="height: 100%;">
 				</div>
 				<div class="item">
-					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew" width="500">
+					<img class="img-responsive center-block" src="images/myself/Crew.jpg" alt="Rowing Crew" style="height: 100%;">
 				</div>
 			</div>
 
