--- a/bio.html
+++ b/bio.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
 	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	<script src="googtrack.js"></script>
